@@ -76,7 +76,6 @@ Export-Package: org.eclipse.sirius.business.api.action;version="2.0.4",
  org.eclipse.sirius.tools.api.command.ui;version="3.0.0",
  org.eclipse.sirius.tools.api.command.view;version="2.0.4",
  org.eclipse.sirius.tools.api.interpreter;version="2.0.5",
- org.eclipse.sirius.tools.api.interpreter.context;version="2.0.4",
  org.eclipse.sirius.tools.api.permission;version="2.0.4",
  org.eclipse.sirius.tools.api.preferences;version="2.0.4",
  org.eclipse.sirius.tools.api.profiler;version="2.0.5",
